# comp_graphics

./: .gitignore
assn0/starter0/: CMakeLists.txt  README.txt
assn0/starter0/solution/athena/: a0
assn0/starter0/solution/osx/: a0
assn0/starter0/src/: main.cpp  recorder.cpp  recorder.h  starter0_util.cpp  starter0_util.h  teapot.h
assn0/starter0/vecmath/: Matrix2f.cpp  Matrix3f.cpp
assn0/starter0/vecmath/include/: Matrix2f.h
assn1/starter1/: CMakeLists.txt  README.txt
assn1/starter1/sample_solution/athena/: a1
assn1/starter1/sample_solution/mac/: a1
assn1/starter1/solution/: a1
assn1/starter1/src/: camera.cpp  camera.h  curve.cpp  curve.h  gl.h  main.cpp  parse.cpp  parse.h  starter1_util.cpp  starter1_util.h  surf.cpp  surf.h  tuple.h  vertexrecorder.cpp  vertexrecorder.h
assn1/starter1/swp/: asian_vase.swp  bez7.swp  circles.swp  core.swp  dna_helix.swp  flircle.swp  florus.swp  gentorus.swp  norm.swp  tor.swp  weird.swp  weirder.swp  wineglass.swp
assn1/starter1/vecmath/: Matrix4f.cpp  Quat4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
assn2/starter2/: CMakeLists.txt  README.txt
assn2/starter2/data/: Model1.attach  Model1.skel  Model2.attach  Model2.skel  Model3.attach  Model3.skel  Model4.attach  Model4.skel
assn2/starter2/sample_solution/athena/: a2
assn2/starter2/sample_solution/mac/: a2
assn2/starter2/src/: camera.cpp  camera.h  joint.h  main.cpp  matrixstack.cpp  matrixstack.h  mesh.cpp  mesh.h  skeletalmodel.cpp  skeletalmodel.h  starter2_util.cpp  starter2_util.h  tuple.h  vertexrecorder.cpp  vertexrecorder.h
assn2/starter2/vecmath/: CMakeLists.txt  Matrix3f.cpp  Vector3f.cpp
assn2/starter2/vecmath/include/: Vector3f.h  Vector4f.h
assn3/starter3/: CMakeLists.txt  README.txt  a3
assn3/starter3/sample_solution/athena/: a3
assn3/starter3/sample_solution/mac/: a3
assn3/starter3/src/: camera.cpp  clothsystem.cpp  clothsystem.h  main.cpp  particlesystem.cpp  particlesystem.h  pendulumsystem.cpp  pendulumsystem.h  simplesystem.cpp  simplesystem.h  starter3_util.cpp  starter3_util.h  timestepper.cpp  timestepper.h  vertexrecorder.cpp  vertexrecorder.h
assn4/starter4/: CMakeLists.txt  a4  generate_images.bat  generate_images.sh  test_cases.sh
assn4/starter4/data/: scene02_cube.txt  scene03_sphere.txt  scene05_bunny_200.txt  scene07_arch.txt
assn4/starter4/sample_solution/athena/: a4
assn4/starter4/sample_solution/mac/: a4
assn4/starter4/src/: ArgParser.cpp  ArgParser.h  Camera.h  Image.cpp  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ObjTriangle.cpp  ObjTriangle.h  Object3D.cpp  Object3D.h  Ray.h  Renderer.cpp  SceneParser.cpp  SceneParser.h  VecUtils.h
assn4/starter4/vecmath/: Matrix2f.cpp  Matrix4f.cpp  Vector3f.cpp
assn4/starter4/vecmath/include/: Matrix3f.h  Quat4f.h  Vector3f.h
assn5/starter5/: CMakeLists.txt  README.txt  a5
assn5/starter5/data/sponza/: sponza_norm.mtl
assn5/starter5/data/sponza_low/: obj_clip.py  sponza_norm.mtl
assn5/starter5/sample_solution/athena/: a5
assn5/starter5/sample_solution/mac/: a5
assn5/starter5/shaders/: diffuse_nolight.glsl  fragmentshader_color.glsl  fragmentshader_dirlight.glsl  vertexshader.glsl
assn5/starter5/src/: camera.cpp  camera.h  main.cpp  main.h  objparser.cpp  objparser.h  renderer.cpp  renderer.h  starter5_util.cpp  starter5_util.h  vertexrecorder.cpp  vertexrecorder.h
assn5/starter5/vecmath/: Matrix3f.cpp  Matrix4f.cpp
assn5/starter5/vecmath/include/: Matrix2f.h  Matrix3f.h  Matrix4f.h  Quat4f.h  Vector2f.h  Vector3f.h  Vector4f.h  vecmath.h
final_project/: 8k.sh  README.txt  results.txt
final_project/data/: bunny_4k.txt  dragon_50k.txt  horse_100k.txt  scene01_plane.txt  scene04_axes.txt  scene05_bunny_1k_green.txt  scene06_bunny_1k.txt
final_project/src/: CubeMap.cpp  CubeMap.h  Image.h  KDTree.cpp  KDTree.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  Octree.cpp  Octree.h  Ray.h  Renderer.cpp  Renderer.h  VecUtils.cpp  main.cpp  stb_image_write.h
final_project/vecmath/: Quat4f.cpp  Vector2f.cpp  Vector4f.cpp
final_project/vecmath/include/: Matrix4f.h  Vector2f.h  vecmath.h
